--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,15 @@
 buildscript {
   repositories {
     jcenter()
+    maven {
+      url 'https://maven.google.com/'
+      name 'Google'
+    }
+    google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.2.0'
+//    classpath 'com.android.tools.build:gradle:1.2.0'
+    classpath 'com.android.tools.build:gradle:3.1.2'
   }
 }
 
@@ -19,6 +25,10 @@ allprojects {
   repositories {
     jcenter()
     maven { url 'https://oss.sonatype.org/content/groups/public' }
+    maven {
+      url 'https://maven.google.com/'
+      name 'Google'
+    }
   }
 }
 
