--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,9 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
   compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
-  buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
-  defaultConfig {
+    defaultConfig {
     applicationId "com.rengwuxian.materialedittext.sample"
     minSdkVersion 12
     targetSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
@@ -15,11 +14,12 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.android.support:appcompat-v7:22.2.0'
+  implementation 'com.android.support:appcompat-v7:22.2.0'
 //  compile 'com.rengwuxian.materialedittext:library:2.1.4'
   compile project(':library')
 }
